Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.37 [20130907] [svn: r512]
  - sg_compare_and_write: fix wrprotect setting
    - add --quiet option to suppress miscompare report
    - merge features from another implementation
  - sg_inq: fix referrals VPD page
    - dev_id VPD: T10 vendor id designator clean up
  - sg_logs: improve for tape drives, general cleanup
  - sg_persist: fix core dump on -Q option
  - sg_unmap: fix core dump on -g option
  - sg_vpd: dev_id VPD: T10 vendor id designator clean up
  - sg_ses: add --nickname and --nickid options
    - eiioe added to additional element status page (ses3r6)
  - sg_verify: improve miscompare handling
    - rename --btychk=ndo option to --ndo=ndo (hide former)
    - add --quiet option
  - sg_xcopy: allow sg and bsg devices
    - fix for bpt going negative
    - fix for seek in multi segment copies
  - sg_libs: extended copy opcode renamed (spc4r34)
    - sg_ll_receive_copy_results(): expand for all sa_s
    - add sg_get_sense_key()
    - add sg_ll_3party_copy_out()
    - add dStrHexErr(): ascii hex to stderr
    - add dStrHexStr(): ascii hex to string
    - add SG_LIB_CAT_MISCOMPARE to categories
    - clean header files
  - scripts/rescan-scsi-bus.sh KG's v1.57 + HR patch
    - improve wlun handling, detect updated and resized
      devices, better multipath support
  - Makefile.am cleanup
  - examples: add sg_tst_excl and sg_tst_excl2

Changelog for sg3_utils-1.36 [20130531] [svn: r497]
  - sg_vpd: Protocol-specific port information VPD page
    for SAS SSP, persistent connection (spl3r2), power
    disable (spl3r3)
    - block device characteristics: add FUAB bit
  - sg_xcopy: handle more descriptor types; handle zero
    maximum segment length; allow list IDs to be disabled;